# iris

./: .gitignore  DASHBOARD_SETUP.md  README.md  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.jsx  layout.tsx  page.jsx  page.tsx
app/Blogs/: page.jsx
app/aboutus/: page.jsx
components/: Hero.jsx  Navbar.jsx  navbar.tsx  onthispage.jsx
components/sections/: BenefitsSection.jsx  CTASection.tsx  Footer.jsx  Footer.tsx  HeroSection.tsx  ProblemSolutionSection.tsx  ProcessSection.tsx  ServicesSection.tsx  TestimonialsSection.jsx
frontend/: .env.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: card.tsx  globals.css  layout.tsx  loadingScreen.tsx  page.tsx
frontend/articles/: line-following-robot.md  robotic-2wd-vehicle-drone-blog.md
frontend/components/: loading-screen.tsx  navigation.tsx  onthispage.tsx  project-details-with-files.tsx  project-files.tsx  route-change-provider.tsx  smooth-scroll.tsx
frontend/contexts/: AuthContext.tsx  ToastContext.tsx
frontend/data/: events-data.ts  gallery-data.ts  projects-data.ts  (+2 more)
server/: .env.example  API.md  Cargo.toml  Dockerfile  SETUP.md  render.yaml
server/src/: main.rs
server/src/auth/: mod.rs
server/src/db/: mod.rs
server/src/middleware/: auth.rs  mod.rs
server/src/models/: blog.rs  coin.rs  event.rs  gallery.rs  message.rs  mod.rs  project.rs  project_join_request.rs  user.rs
server/src/routes/: blogs.rs  coins.rs  events.rs  gallery.rs  messages.rs  mod.rs  project_join_requests.rs  projects.rs  stats.rs  users.rs
(+61 files in other folders)
